[gd_scene load_steps=17 format=3 uid="uid://dsduhwe8hqs8a"]

[ext_resource type="PackedScene" uid="uid://t43uc074fdn3" path="res://Server/server.tscn" id="1_73qnq"]
[ext_resource type="FontFile" path="res://castlevania-dracula-x-small-snes.ttf" id="1_fsqd7"]
[ext_resource type="Script" path="res://ClientLobby/lobby.gd" id="1_ksb3b"]
[ext_resource type="Texture2D" path="res://Art/UI/example-button.png" id="2_mukv1"]
[ext_resource type="Texture2D" path="res://Art/UI/title-bkg.png" id="4_7swyg"]
[ext_resource type="StyleBox" uid="uid://qhm3ejxbdlqi" path="res://Levels/level_selection/ugly-button-style.tres" id="5_2cfmt"]
[ext_resource type="FontFile" uid="uid://cnyiuob14qqh7" path="res://Art/Fonts/castlevania-dracula-x-small-snes.ttf" id="6_umrrv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b1jfh"]
atlas = ExtResource("2_mukv1")
region = Rect2(2.35797, 38.4629, 152.408, 95.2149)
margin = Rect2(2.08165e-12, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sbl0o"]
content_margin_left = 4.0
texture = SubResource("AtlasTexture_b1jfh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6iqx8"]
texture = ExtResource("2_mukv1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsbx5"]

[sub_resource type="Theme" id="Theme_05jy7"]
Button/font_sizes/font_size = 16
Button/fonts/font = ExtResource("1_fsqd7")
Button/styles/normal = SubResource("StyleBoxTexture_sbl0o")
LineEdit/fonts/font = ExtResource("1_fsqd7")
LineEdit/styles/focus = SubResource("StyleBoxTexture_6iqx8")
LineEdit/styles/normal = SubResource("StyleBoxTexture_xsbx5")

[sub_resource type="Theme" id="Theme_0rx6r"]
Button/fonts/font = ExtResource("1_fsqd7")
LineEdit/fonts/font = ExtResource("1_fsqd7")

[sub_resource type="Theme" id="Theme_o32tr"]
Button/fonts/font = ExtResource("1_fsqd7")

[sub_resource type="Theme" id="Theme_le3wr"]
Button/fonts/font = ExtResource("1_fsqd7")
Button/styles/normal = ExtResource("5_2cfmt")

[sub_resource type="Theme" id="Theme_lhs4f"]
default_font = ExtResource("6_umrrv")
default_font_size = 32

[node name="Lobby" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.11283, 1.11141)
theme = SubResource("Theme_05jy7")
script = ExtResource("1_ksb3b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(320, 180)
transform = Transform2D(1, 0, 0, 1, 320, 180)
follow_viewport_scale = 19.232

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -0.999
anchor_top = -1.001
offset_left = -16.32
offset_top = -47.82
offset_right = -24.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.45886, 1.52125)
color = Color(0.192157, 0.27451, 0.627451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(300, 0)
offset_left = -311.0
offset_top = -173.0
offset_right = 101.0
offset_bottom = -26.0
scale = Vector2(0.741559, 0.676362)
theme_override_constants/separation = 15

[node name="LobbyLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fsqd7")
text = "Lobby"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0rx6r")
columns = 2

[node name="NameLabel" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fsqd7")
text = "Player Name: "

[node name="NameEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Enter Name"
alignment = 1

[node name="IPLabel" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fsqd7")
text = "IP Address:"

[node name="IPEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter IP Address"
alignment = 1

[node name="PortLabel" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fsqd7")
text = "Port: "

[node name="PortEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "3296"
placeholder_text = "Enter Port Number"
alignment = 1

[node name="Server" parent="CanvasLayer" instance=ExtResource("1_73qnq")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 144.0
offset_top = 204.0
offset_right = 144.0
offset_bottom = 204.0
grow_horizontal = 1
grow_vertical = 1

[node name="HostGame" parent="CanvasLayer/Server" index="0"]
anchors_preset = -1
anchor_left = 0.388
anchor_right = 0.614
anchor_bottom = 1.0
offset_left = -373.0
offset_top = -234.0
offset_right = -221.0
offset_bottom = -201.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.918449, 0.758839)
theme = SubResource("Theme_o32tr")

[node name="JoinBtn" type="Button" parent="CanvasLayer"]
layout_direction = 1
offset_left = -310.0
offset_top = -62.0
offset_right = 102.0
offset_bottom = -19.0
scale = Vector2(0.730641, 0.617991)
theme = SubResource("Theme_le3wr")
text = "Join Game"

[node name="StartGameBtn" type="Button" parent="CanvasLayer"]
offset_left = -312.0
offset_top = -94.0
offset_right = 100.0
offset_bottom = -51.0
scale = Vector2(0.735215, 0.619962)
size_flags_horizontal = 5
theme = SubResource("Theme_le3wr")
text = "Start Game"

[node name="BackBtn" type="Button" parent="CanvasLayer"]
offset_left = -319.0
offset_top = -180.0
offset_right = -177.0
offset_bottom = -59.0
scale = Vector2(0.303511, 0.243339)
theme = SubResource("Theme_lhs4f")
text = "Back"

[node name="Title-bkg" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.364706, 0.364706, 0.364706, 1)
position = Vector2(932, 559.716)
scale = Vector2(0.215758, 0.215758)
texture = ExtResource("4_7swyg")

[connection signal="pressed" from="CanvasLayer/Server/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="CanvasLayer/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/BackBtn" to="." method="_on_back_btn_pressed"]

[editable path="CanvasLayer/Server"]
